# TimeManagement

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  justfile
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  errors.py  extensions.py  seed.py
backend/app/api/: __init__.py  _helpers.py  approvals.py  auth.py  clients.py  entries.py  invoices.py  projects.py  reports.py  spa.py  test_helpers.py  timer.py
backend/app/auth/: decorators.py  jwt_callbacks.py
backend/app/models/: __init__.py  client.py  enums.py  invoice.py  project.py  revoked_token.py  time_entry.py  user.py
backend/app/schemas/: auth.py  client.py  entry.py  invoice.py  project.py
backend/app/services/: __init__.py  auth_service.py  client_service.py  entry_service.py  invoice_service.py  project_service.py  report_service.py  timer_service.py
backend/migrations/versions/: 81da481860ab_time_entries_and_timer_events.py  bd6b693144dc_clients_and_projects.py  e681c1a4b563_invoices_and_counter.py  f960fc47a8f7_users_and_revoked_tokens.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  test_admin_clients_projects.py  test_approvals_flow.py  test_auth_flow.py  test_home_page.py  test_invoice_flow.py  test_reports_flow.py  test_spacebar_shortcut.py  test_timer_flow.py  test_timesheet_submit.py
backend/tests/e2e/pages/: login_page.py  today_page.py
backend/tests/integration/: _factories.py  test_approvals.py  test_auth.py  test_clients.py  test_entries.py  test_health.py  test_invoices.py  test_projects.py  test_reports.py  test_timer.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  ErrorBoundary.tsx
frontend/src/features/approvals/: ApprovalsPage.tsx  hooks.ts
frontend/src/features/auth/: LoginPage.tsx  useAuth.ts
frontend/src/features/clients/: ClientsPage.tsx  hooks.ts
frontend/src/features/entries/: hooks.ts
frontend/src/features/invoices/: InvoicesPage.tsx  hooks.ts
frontend/src/features/projects/: ProjectsPage.tsx  hooks.ts
frontend/src/features/reports/: ReportsPage.tsx  hooks.ts
frontend/src/features/timer/: IdleModal.tsx  TimerBar.tsx  hooks.ts  useIdleDetection.ts  useSpacebarShortcut.ts
frontend/src/features/timesheet/: TimesheetView.tsx
frontend/src/features/today/: TodayView.tsx
frontend/src/lib/: api.ts  format.ts  queryKeys.ts  tokenStore.ts  types.ts  utils.ts
frontend/src/routes/: router.tsx
frontend/tests/: App.test.tsx
infra/db/init/: 01-create-test-db.sql
