[project]
name = "timetrack-backend"
version = "0.1.0"
description = "TimeTrack — backend (Flask + SQLAlchemy 2.0)"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=3.8.0",
    "flask-cors>=5.0.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.1",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.1",
    "weasyprint>=63.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
    "pytest-xdist>=3.6.1",
    "pytest-playwright>=0.6.0",
    "playwright>=1.49.0",
    "requests>=2.32.0",
    "factory-boy>=3.3.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-python-dateutil>=2.9.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
extend-exclude = ["migrations/versions/*", "migrations/env.py", "migrations/script.py.mako"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "ARG",  # flake8-unused-arguments
    "DTZ",  # flake8-datetimez (forces aware datetimes)
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in default args (used by Flask-Limiter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]  # pytest fixtures look like unused args

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = []
files = ["app", "tests"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = [
    "factory.*",
    "factory_boy.*",
    "flask_migrate.*",
    "flask_cors.*",
    "flask_limiter.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: integration tests that hit the database",
    "e2e: end-to-end Playwright tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
